# fide-glicko

./: .gitignore  .samignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/: pull_request_template.md
docker/: Dockerfile  requirements.txt
exploratory/: benchmark_xml_compression.py  check_tournament_fields.go  endpoint_checker.py  explore_player_list_columns.py  explore_player_list_format.py  explore_player_list_xml.py  explore_tournament_report.py  get_federations.py  get_tournament_counts.py  get_tournament_counts_optimized.py  get_tournament_details.go  get_tournament_details_single.go  get_tournaments.py  measure_details_raw_size.py  measure_player_list_memory.py  measure_player_list_memory_by_step.py  measure_reports_raw_size.py  measure_split_ids_memory.py  measure_tournament_details_memory.py  measure_tournaments_raw_size.py  pipeline_historical.py  test_report_scraper.py  test_tournament_scrape.go  test_tournament_scraper_history.py  validate_pipeline.py
handlers/: README.md  __init__.py  details_chunk.py  ensure_run_name.py  federations.py  lambda_logging.py  merge_chunks.py  orchestrator.py  pipeline_ssm.py  player_list.py  reports_chunk.py  split_ids.py  tournaments.py  validate.py
infra/: README.md  deploy_details_chunk_lambda.sh  deploy_federations_lambda.sh  deploy_merge_chunks_lambda.sh  deploy_player_list_lambda.sh  deploy_reports_chunk_lambda.sh  deploy_split_ids_lambda.sh  deploy_tournaments_lambda.sh  deploy_validate_lambda.sh  (+3 more)
(+56 files in other folders)
