[project]
name = "fide-glicko"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0.0",
    "aiohttp>=3.10.0",
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "playwright>=1.48.0",
    "tqdm>=4.66.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
]

[tool.pytest.ini_options]
markers = [
    "live: mark test as requiring network (deselect with -m 'not live')",
]
testpaths = ["tests"]
